welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:-6: error: Missing closing brace `}' assumed here
try {
^in1To10:1: error: expected class or object definition
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
^